<resources>
    <string name="app_name">BottomNavYT</string>
    <string name="para">The job marketplace\n and community that connects\n and matches companies\n with remote professionals</string>
    <string name="hi">Hi!\n Please Login</string>
    <string name="em">E-mail</string>
    <string name="Ehint">Enter Your E-mail</string>
    <string name="pwd">Password</string>
    <string name="reg">Register</string>
    <string name="log">Login</string>
    <string name="wel">Welcome!</string>
    <string name="pr">Profile</string>
    <string name="job">Job List</string>
    <string name="nhint">Name</string>
    <string name="ephint">E-mail</string>
    <string name="addhint">Address</string>
    <string name="couhint">Country</string>
    <string name="pno">Phone Number</string>
    <string name="skl">Skills</string>
    <string name="un">User Name</string>
    <string name="desc">The job marketplace\n and community that connects\n and matches companies\n with remote professionals</string>
    <string name="unam">User Name:</string>
    <string name="unhint">Kaushi@com</string>
    <string name="news_a">President Joe Biden has laid out plans to vaccinate 70% of US adults by 4 July and roll out the shots for 12- to 15-year-olds as soon as possible. Mr Bidens new goal includes having 160 million adults fully vaccinated by Independence Day. The target is well within reach as 105 million have already had the required jabs, and the US is vaccinating nearly a million adults per day. But the vaccination rate is half of what it was just three weeks ago. Mr Biden said his administration was working to win over "doubters" about the shots. Israel - a world leader in vaccination rates - has nearly fully reopened its economy and seen its number of new coronavirus cases crash to almost zero, with just over 60% of the population having received at least one shot. Israel may be close to herd immunity to Covid Herd immunity happens when enough of a population has protection against an infection that it stops being able to spread - and even people who don\'t themselves have immunity are indirectly protected. For Covid the estimated threshold for herd immunity is at least 65%-70% of people having protection against infection, although Mr Biden\'s chief medical adviser Dr Anthony Fauci has increased his estimate to 90% and the World Health Organization (WHO) has said the level is not known. </string>
    <string name="news_b">Maintenance Engineer</string>
    <string name="news_c">West Bengal chief minister Mamata Banerjee has announced that local train services shall be suspended in the state from Thursday onwards to combat the worsening coronavirus disease (Covid-19) pandemic situation. Meanwhile, metro rail and government-run transport services in West Bengal shall operate with 50% occupancy from Thursday, the chief minister announced. Click here for more details on the fresh Covid-19 curbs imposed in West Bengal on Wednesday. West Bengal on Tuesday reported its highest single-day deaths of 107 Covid-19 patients, which took the states death toll to 11,744, the health department had said in a bulletin. Meanwhile, a record number of new coronavirus disease cases were also registered, as the bulletin showed a single-day spike of 17,639 cases. West Bengals total Covid-19 infection tally currently stands at 8,98,533. The West Bengal chief minister also announced lockdown-like measures across the state to tackle the recent surge in Covid-19 cases, encountered in the second wave of the coronavirus disease. Shopping complexes, markets, gyms, cinema halls, and beauty parlours have been closed, while all manner of social and political gatherings have been prohibited. </string>
    <string name="news_d"> The ministry of home affairs has asked all the states and Union Territories to ensure that no fire incident occurs in any of the health facilities (particularly Covid-19 dedicated facilities) both in the government and private sector. The ministry has taken cognizance of occurrence of fire incidents, caused by short-circuiting, in hospitals and nursing homes in the last few days. In his letter to the states/UTs, Union home secretary Ajay Kumar Bhalla said that in the context of recent fire incidents and the impending summer season, either because of high temperature, lack of maintenance or high load on the internal wirings within the facilities, short circuiting takes place, leading to fire incidents and consequential loss of life and essential infrastructure. The communication added that care should be taken to put in place a plan of action to ensure that no fire incident occurs in these facilities. A fire was reported from a hospital in Vikaspuri on Tuesday in which 26 Covid-19 patients were rescued. Another fire was reported from Virar, Mumbai, on April 23 at Vijay Vallabh hospital in which 15 patients died. On April 25, three patients died in a Surat hospital fire. The MHA has asked the states/UTs to conduct a detailed review with officials from the health, power and fire departments, and prepare a detailed plan of action to ensure that fire safety measures are in place in all hospitals and health facilities. Bhalla also pointed out to the recently issued advisory of the Director General (Fire Services, Civil Defence and Home Guards) on fire safety in hospitals and nursing homes. The communication highlighted that a large number of Covid-19 cases are under treatment in Covid-dedicated health facilities across the country. “In most of the cases, oxygen supported beds, ICU beds, and ventilators are critical interventions, and therefore, it is important to ensure that there is uninterrupted power supply on regular 24x7 basis, in all the hospitals and medical facilities,” said Press Information Bureau in a statement. </string>
    <string name="news_e"> Gary Newman, 73, who has been stranded in India since March last year, filed a lawsuit against the Scott Morrison government also for threatening to prosecute those attempting to enter Australia with the possibility of a jail term and a penalty. A 73-year-old Australian, who is stranded in India since March last year, has filed a lawsuit before a Sydney court against the federal government for banning flights from India and threatening to prosecute those attempting to enter the country with the possibility of a jail term and a penalty, saying the move is “unconstitutional”. The lawyers of Gary Newman, who is stranded in Bengaluru since March last year, have argued in the federal court in Sydney that the ban was “unconstitutional”. The Australian government, for the first time in history, recently imposed a ban on its citizens from returning home, if they have spent time in India up to 14 days before flying back. The government threatened to prosecute them with a possibility of five years of jail term or a penalty of 66,000 Australian dollars (USD 50,899). Michael Bradley and Chris Ward lodged the application before Justice Stephen Burley on Wednesday afternoon. The application firstly said that the Commonwealth was acting outside its powers and secondly, Health Minister Greg Hunts declaration was in breach of an implied freedom to return home, ABC news reported. </string>
    <string name="news_f"> Former India hockey player and coach M.K. Kaushik has tested positive for COVID-19 and admitted to a nursing home here. The oxygen saturation level of the 66-year-old, a member of the 1980 Moscow Olympics gold-medal winning Indian team, keeps fluctuating, according to his family. "He is suffering from COVID-19 and is hospitalised in a city nursing home here," his son Ehsan told PTI. "He first developed symptoms on April 17 but RTPCR and RAT tests came negative. Then we did his CT scan on chest on April 24 and pneumonia due to Covid was detected. "Since then he has been hospitalised and his condition is between, neither stable nor serious. His oxygen level drops drastically at night which is a major issue," he added. Kaushik\'s wife was also getting treatment at the same hospital after contracting the virus but she is recovering well and is likely to be discharged this week."My mother has recovered now and she should be discharged within 2-3 days," Ehsan said.Kaushik had coached both the senior men’s and women’s teams. Under his coaching, India men\'s team had won its last major international tournament, the 1998 Asian Games, Bangkok.Also, Indian women\'s team had won bronze medal at the Doha Asian Games in 2006 under his coachingHe was given the Arjuna Award in 1998, before being bestowed with the Dronacharya award in 2002.India is battling a devastating second wave of COVID-19 pandemic which has been killing more than 3000 people everyday. </string>
    <string name="news_g">Delhi reported 20,960 new coronavirus disease (Covid-19) cases on Wednesday and 311 related fatalities which pushed the total number of cases in the city to 1,253,902 and the death toll to 18,063. The positivity rate, which is a measure of the percentage of people who test positive for the virus of those who have been tested overall, stood at 26.37 per cent, according to the state health bulletin. Within the same period, 79,491 tests were conducted and the active cases in the city now stand at 91,859. The total number of recoveries in the national capital stood at 1,143,980 as 19,209 patients recovered from the virus during the period. The number of containment zones in the city rose to 47,704 from 44,052 the previous day, the bulletin showed. Delhi is currently under lockdown till May 10 during which only essential activities are allowed. These include sale and supply of food items, groceries, medicines, movement of health care workers, frontline workers, government staff, judicial officials, journalists and those seeking medical care. The hospitals in the city have been reporting shortage of oxygen supplies, beds and essential medicines as the health infrastructure continues to crumble under the pressure of the unprecedented rise in the number of Covid-19 patients requiring oxygen or ICU support. </string>
    <string name="lkinf">Looking for a Job?</string>
    <string name="strt">Get Started</string>
    <string name="phint">Enter Your Password</string>
    <string name="recov">Don\'t remember Password Recovery It</string>
    <string name="or">Or Logi with</string>
    <string name="fb">FaceBook</string>
    <string name="gg">Google</string>
    <string name="logbtn">LOGIN</string>
    <string name="sign">Create\nAccount</string>
    <string name="nm">Name</string>
    <string name="enterN">Enter Your Name</string>
    <string name="signEmail">E-mail</string>
    <string name="enterEm">Enter Your E-mail</string>
    <string name="signpwd">Password</string>
    <string name="enpw">Enter Your Password</string>
    <string name="Rpwd">Re-Type Password</string>
    <string name="rEnpwd">Repeat Your Password</string>
    <string name="signupbtn">SIGN-UP</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="enter_your_e_mail_here">Enter Your E-mail Here</string>
    <string name="enter_your_password_here">Enter Your Password Here</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="admin_management">Admin Management</string>
</resources>