<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_signup">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign"
        android:textColor="#ffffff"
        android:textSize="@dimen/Header_text_Size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="603dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.482">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nm"
            android:textSize="@dimen/Textbox_headers"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:height="@dimen/layout_height_edttext"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/enterN"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#8b8b8b"
            android:textSize="@dimen/textbox_tex" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signEmail"
            android:textSize="@dimen/Textbox_headers"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:height="@dimen/layout_height_edttext"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/enterEm"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#8b8b8b"
            android:textSize="@dimen/textbox_tex" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signpwd"
            android:textSize="@dimen/Textbox_headers"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:height="@dimen/layout_height_edttext"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/enpw"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#8b8b8b"
            android:textSize="@dimen/textbox_tex" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Rpwd"
            android:textSize="@dimen/Textbox_headers"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_edttext"
            android:layout_marginTop="12dp"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/rEnpwd"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#8b8b8b"
            android:textSize="@dimen/textbox_tex" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signuporg"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/signupbtn"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="187dp"
        android:layout_height="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/women2" />

</androidx.constraintlayout.widget.ConstraintLayout>