<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/hi"
        android:textColor="#ffffff"
        android:textSize="@dimen/Header_text_Size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.482">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/em"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emaillog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/Ehint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#8b8b8b"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/pwd"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logpwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/eddittext_background"
            android:ems="10"
            android:hint="@string/phint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#8b8b8b"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/recov"
            android:textAlignment="center"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            tools:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/fb"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/gg"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logorg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/logbtn"
            android:background="@drawable/button_background"
            style="@android:style/Widget.Button"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="187dp"
        android:layout_height="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/women2" />

</androidx.constraintlayout.widget.ConstraintLayout>