<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="172dp"
        android:layout_height="59dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/green"
        android:text="@string/reg"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/loginbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="172dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/green"
        android:text="@string/log"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/registerbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/registerbtn" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="282dp"
        android:layout_height="306dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/women" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:text="@string/wel"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>