<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="857dp"
        android:layout_height="484dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/girl" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="385dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottom_white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="159dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="448dp"
        android:text="@string/lkinf"
        android:textColor="#000000"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/button1"
        android:layout_width="169dp"
        android:layout_height="79dp"

        android:layout_marginEnd="4dp"
        android:background="@drawable/background_button_intro"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:text="@string/strt"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/viewdesc"
        android:layout_width="347dp"
        android:layout_height="81dp"
        android:layout_marginEnd="4dp"
        android:text="@string/desc"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/admin"
        android:layout_width="159dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/roundbutton2"

        android:backgroundTint="@color/green"
        android:text="Admin"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewdesc"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>